@@ -1,3 +1,7 @@
+2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
+	* application-src/ampgsql.pl: print to debug file and server if unlink
+	  fail.
+
 2011-07-25  Jean-Louis Martineau <martineau@zmanda.com>
 	* man/xml-source/amgtar.8.xml, man/xml-source/amraw.8.xml,
 	  man/xml-source/amsamba.8.xml, man/xml-source/amstar.8.xml,
